home component renders the layout and footer components

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "leet-hints",
-  "homepage": "https://<USERNAME>.github.io/<REPO NAME>",
+  "homepage": "https://adamrturman.github.io/leet-hints",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
